--- a/Xamaridea.VisualStudioPlugin/ConfigurationDialog.xaml
+++ b/Xamaridea.VisualStudioPlugin/ConfigurationDialog.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.12.0"
-             mc:Ignorable="d" 
-             Height="152" Width="500">
+             mc:Ignorable="d" Title="Xamaridea plugin configuration"
+             Height="178" Width="500">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -22,5 +23,6 @@
         </TextBlock>
         <TextBox x:Name="BrowseTextBox" IsReadOnly="True" Grid.Row="1" Margin="10,0,0,0" />
         <Button x:Name="BrowseButton" Click="BrowseButton_OnClick" Content="Browse" Grid.Row="1" Grid.Column="1"/>
+        <Button x:Name="OkButton" Click="OkButton_OnClick" Content="Ok" Grid.Row="2" Grid.Column="1" Margin="0,10,0,0"/>
     </Grid>
 </platformUi:DialogWindow>
