--- a/Xamaridea.VisualStudioPlugin/ConfigurationDialog.xaml
+++ b/Xamaridea.VisualStudioPlugin/ConfigurationDialog.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.12.0"
              mc:Ignorable="d" Title="Xamaridea plugin configuration"
-             Height="178" Width="500">
+             Height="185" Width="500">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,6 +23,18 @@
         </TextBlock>
         <TextBox x:Name="BrowseTextBox" IsReadOnly="True" Grid.Row="1" Margin="10,0,0,0" />
         <Button x:Name="BrowseButton" Click="BrowseButton_OnClick" Content="Browse" Grid.Row="1" Grid.Column="1"/>
-        <Button x:Name="OkButton" Click="OkButton_OnClick" Content="Ok" Grid.Row="2" Grid.Column="1" Margin="0,10,0,0"/>
+        <Button x:Name="OkButton" Click="OkButton_OnClick" Height="20" Content="Ok" VerticalAlignment="Bottom" Grid.Row="2" Grid.Column="1" Margin="0,10,0,0"/>
+        <StackPanel Orientation="Vertical" Grid.Row="2" Margin="10,1,0,0">
+            <TextBlock>
+                <Hyperlink Click="OnOpenAndroidTemplateDirectory">
+                    <TextBlock Text="Open Android template project directory"/>
+                </Hyperlink>
+            </TextBlock>
+            <TextBlock Margin="0,1,0,0">
+                <Hyperlink Click="OnResetTemplateToDefault">
+                    <TextBlock Text="Reset template to default"/>
+                </Hyperlink>
+            </TextBlock>
+        </StackPanel>
     </Grid>
 </platformUi:DialogWindow>
