--- a/Xamaridea.VisualStudioPlugin/ConfigurationDialog.xaml
+++ b/Xamaridea.VisualStudioPlugin/ConfigurationDialog.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.12.0"
+             xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.14.0"
              mc:Ignorable="d" Title="Xamaridea plugin configuration"
              Height="185" Width="500">
     <Grid Margin="0,0,10,10">
@@ -27,10 +27,10 @@
         <StackPanel Orientation="Vertical" Grid.Row="2" Margin="10,1,0,0">
             <TextBlock>
                 <Hyperlink Click="OnOpenAndroidTemplateDirectory">
-                    <TextBlock Text="Open Android template project directory"/>
+                    <TextBlock Text="Edit Android template"/>
                 </Hyperlink>
             </TextBlock>
-            <TextBlock Margin="0,1,0,0">
+            <TextBlock Margin="0,2,0,0">
                 <Hyperlink Click="OnResetTemplateToDefault">
                     <TextBlock Text="Reset template to default"/>
                 </Hyperlink>
